Fixed some typos

--- a/doc/man/ilbmpack.1
+++ b/doc/man/ilbmpack.1
@@ -2,7 +2,7 @@
 .SH "NAME"
 ilbmpack \- Compress or decompress ILBM images inside an IFF file
 .SH "SYNOPSIS"
-\fBiffpack\fR [\fIoptions\fR] [\fIfile.ILBM\fR]
+\fBilbmpack\fR [\fIoptions\fR] [\fIfile.ILBM\fR]
 .SH "DESCRIPTION"
 .PP
 The command \fBilbmpack\fR compresses or decompresses all the BODY chunks of all
