--- a/doc/man/ilbmpack.1
+++ b/doc/man/ilbmpack.1
@@ -2,13 +2,25 @@
 .SH "NAME"
 ilbmpack \- Compress or decompress ILBM images inside an IFF file
 .SH "SYNOPSIS"
-\fBilbmpack\fR [\fIoptions\fR] [\fIfile.ILBM\fR]
+\fBilbmpack\fR [\fI -i | -o\fR] [\fIoptions\fR] [\fIfile.ILBM\fR]
 .SH "DESCRIPTION"
 .PP
 The command \fBilbmpack\fR compresses or decompresses all the BODY chunks of all
 ILBM forms in the given IFF file using the byte run (packbits) algorithm. If no
 IFF file is specified, it reads an IFF file from the standard input.
 .SH "OPTIONS"
+\fB\-i\fR, \fB\-\-input\-file\fR
+.RS 4
+Specifies the input IFF file. If no input file is given, then data will be read
+from the standard input.
+.RE
+.PP
+\fB\-o\fR, \fB\-\-output\-file\fR
+.RS 4
+Specifies the output IFF file. If no output file is given, then data will be
+written to the standard output.
+.RE
+.PP
 \fB\-c\fR, \fB\-\-compress\fR
 .RS 4
 Compresses all BODY chunks of ILBM forms
